--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,13 +8,13 @@ main:
     url: '#about'
     weight: 10
   - name: Publications
-    url: '#featured'
+    url: '/publication'
     weight: 20
   - name: Talks
-    url: '#talks'
+    url: '/event'
     weight: 30
   - name: Posts
-    url: '#posts'
+    url: '/post'
     weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
