--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,9 +13,9 @@ main:
   - name: Talks
     url: '/event'
     weight: 30
-  - name: Posts
-    url: '/post'
-    weight: 40
+  #- name: Posts
+  #  url: '/post'
+  #  weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
