--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,6 +16,9 @@ main:
   #- name: Posts
   #  url: '/post'
   #  weight: 40
+  #- name: Projects
+  #  url: '/projects'
+  #  weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
