--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Elizaveta Semenova, postdoctoral researcher is Bayesian statitistics, machine learning and epidemiology.'
+    description: 'Elizaveta Semenova, postdoctoral researcher is Bayesian machine learning, spatial statistics, and epidemiology.'
     twitter: 'liza_p_semenova'
   analytics:
     google_analytics: ''
