--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,9 @@ main:
   - name: Publications
     url: '/publication'
     weight: 20
-  - name: Talks
-    url: '/event'
-    weight: 30
+  #- name: Talks
+  #  url: '/event'
+  #  weight: 30
   #- name: Posts
   #  url: '/post'
   #  weight: 40
